crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__cache hit after file modification@vite-task-smoke.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/vite-task-smoke
---
> vite run test-task
$ echo hello
hello
$ print-file main.js
console.log('foo');

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   2 tasks • 0 cache hits • 1 cache misses 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] test-task: echo hello ✓
      → Cache disabled: InProcessExecution
  ·······················································
  [2] test-task: print-file main.js ✓
      → Cache miss
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

> replace-file-content main.js foo bar

> vite run test-task
$ echo hello
hello
$ print-file main.js
console.log('bar');

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   2 tasks • 0 cache hits • 1 cache misses 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] test-task: echo hello ✓
      → Cache disabled: InProcessExecution
  ·······················································
  [2] test-task: print-file main.js ✓
      → Cache miss
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
