crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__direct lint@cache-keys.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/cache-keys
---
> vite lint
Found 0 warnings and 0 errors.
Finished in <duration>ms on 0 files with 90 rules using 10 threads.
Found 0 warnings and 0 errors.
Finished in <duration>ms on 0 files with 90 rules using 10 threads.

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 1 cache misses 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[1]> json-edit
Usage: json-edit <filename> <script>
Example: json-edit package.json '_.version = "1.2.3"'
