crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__env-test prints value from additional_envs@additional-envs.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/additional-envs
---
> vite env-test SYNTHETIC_ENV_VAR test_value_from_synthesizer
test_value_from_synthesizer

[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/sed",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/dirname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/uname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/node",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
