crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__env-test with different values@additional-envs.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/additional-envs
---
> vite env-test FOO bar
bar

[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/sed",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/dirname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/uname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/node",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)

> vite env-test BAZ qux
qux

[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/sed",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/dirname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/uname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/node",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
