crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__multiple task failures returns exit code 1@exit-codes.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/exit-codes
---
[1]> vite run -r fail
~/packages/pkg-b$ node -e "process.exit(7)"

~/packages/pkg-a$ node -e "process.exit(42)"


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   2 tasks • 0 cache hits • 2 cache misses • 2 failed 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] pkg-b#fail: ~/packages/pkg-b$ node -e "process.exit(7)" ✗ (exit code: 7)
      → Cache miss: no previous cache entry found
  ·······················································
  [2] pkg-a#fail: ~/packages/pkg-a$ node -e "process.exit(42)" ✗ (exit code: 42)
      → Cache miss: no previous cache entry found
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/Info.plist",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Library/Preferences/Logging/com.apple.diagnosticd.filter.plist",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.CFUserTextEncoding",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.CFUserTextEncoding",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/System/Library/OpenSSL//openssl.cnf",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/System/Library/OpenSSL/openssl.cnf",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "<workspace>/packages/pkg-b",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "<workspace>/packages/pkg-b",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/node",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/node",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/Info.plist",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Library/Preferences/Logging/com.apple.diagnosticd.filter.plist",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.CFUserTextEncoding",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.CFUserTextEncoding",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/System/Library/OpenSSL//openssl.cnf",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/System/Library/OpenSSL/openssl.cnf",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "<workspace>/packages/pkg-a",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "<workspace>/packages/pkg-a",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/node",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/node",
}
